{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "6cf1ff8b-c299-4c14-b681-4ac5a47b8339",
            "actions": [
                {
                    "name": "StartJump",
                    "type": "Button",
                    "id": "b2b38373-23c1-4502-a996-3fa84c4803c8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "EndJump",
                    "type": "Button",
                    "id": "2c83ae09-3087-48e6-b2ff-8e4e832a7428",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Spin",
                    "type": "Button",
                    "id": "6097e2a5-212f-4f7b-bb04-faceac881b7e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "f8481caf-8683-4100-a5e7-7a0893cfa10f",
                    "expectedControlType": "Dpad",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "880fa7b8-51b3-4048-a9c8-b919f52683d3",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard + Mouse",
                    "action": "StartJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f3fb9461-47ea-49c6-802c-7b2c3d991875",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard + Mouse",
                    "action": "Spin",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "ArrowKeys",
                    "id": "2ce11e94-4988-46d5-bf6f-06cdf5f8d3c2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "461f493f-d7e8-46ef-936f-3bbe87303fd1",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard + Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "63af0d7e-20b7-4ce1-922b-80c1351f1475",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard + Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a7ff6eba-2cd7-472d-982a-17f413eef07c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard + Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "97da6046-3669-4258-a227-34adaa364ccf",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard + Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "WASDKeys",
                    "id": "cecf6f60-4b80-441d-a3ba-9e5219cb343b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "96281af3-dcad-4f11-a198-3568f43b3241",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard + Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "dbf61845-644c-448f-836b-4a2f1707984b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard + Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a8d0dd16-4483-481a-842e-89aa345bc990",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard + Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d67fa22a-b7ec-471a-9b1b-5fa85a2c879c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard + Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d3600e79-9e95-4970-9e01-779381d063ef",
                    "path": "<Keyboard>/space",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Keyboard + Mouse",
                    "action": "EndJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard + Mouse",
            "bindingGroup": "Keyboard + Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}